--- a/src/app/components/blog-post/blog-post.component.html
+++ b/src/app/components/blog-post/blog-post.component.html
@@ -1,1 +1,3 @@
-<p>blog-post works!</p>,
+<div class="flex flex-col gap-5">
+    <img [src]="post?.image" class="rounded-md object-cover" />
+</div>
