--- a/src/app/components/post-card/post-card.component.html
+++ b/src/app/components/post-card/post-card.component.html
@@ -1,14 +1,32 @@
 <div class="group cursor-pointer" (click)="onPostSelected()">
-<div class="relative aspect-3/4">
-    <img [src]="post.image" class="object-cover" />
-    <div class="absolute h-24 p-2.5 bg-white/60 backdrop-blur-md w-full z-10 bottom-0 border-t border-white flex flex-col justify-center">
-        <span class="text-sm text-white font-medium">{{post.date | date}}</span>
-        <p class="text-white font-bold text-lg">{{post.author}}</p>
+  <div class="relative min-h-72">
+    <img [src]="post.image" class="object-cover h-72 w-full group-hover:opacity-60 ease-in-out" />
+    <div
+      class="absolute h-24 p-2.5 bg-white/60 backdrop-blur-md w-full z-10 bottom-0 border-t border-white flex flex-col justify-center"
+    >
+    <p class="text-white font-bold text-lg">{{ post.author }}</p>
+    <span class="text-sm text-white font-medium">{{ post.date | date }}</span>
     </div>
-</div>
-<div class="flex flex-col gap-5 mt-5">
-<h2 class="font-bold text-xl group-hover:underline">{{post.title}}</h2>
-<p>{{post.extract}}</p>
-
-</div>
+  </div>
+  <div class="flex flex-col gap-5 mt-5">
+    <h2 class="font-bold text-xl group-hover:underline">{{ post.title }}</h2>
+    <p class="text-neutral-700 dark:text-neutral-600">{{ post.extract }}</p>
+    <div class="flex flex-row gap-2 group-hover:underline">
+      <p class="font-bold">Leer artículo</p>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="size-5"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+        />
+      </svg>
+    </div>
+  </div>
 </div>
