--- a/src/app/components/new-post-form/new-post-form.component.html
+++ b/src/app/components/new-post-form/new-post-form.component.html
@@ -2,15 +2,25 @@
 
 <div class="flex flex-col gap-1">
     <label for="image">Imagen de portada*</label>
-    <input #imagePicker type="file" id="image" formControlName="image" class="hidden" required  (change)="onFileSelected($event)"   accept="image/*"    />
-    <div (click)="imagePicker.click()" class="cursor-pointer w-full min-h-64 border border-primary-300 hover:bg-primary-100 border-dashed rounded-md bg-primary-50 text-primary-700 flex flex-col items-center justify-center gap-3">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-12">
-            <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 15.75 5.159-5.159a2.25 2.25 0 0 1 3.182 0l5.159 5.159m-1.5-1.5 1.409-1.409a2.25 2.25 0 0 1 3.182 0l2.909 2.909m-18 3.75h16.5a1.5 1.5 0 0 0 1.5-1.5V6a1.5 1.5 0 0 0-1.5-1.5H3.75A1.5 1.5 0 0 0 2.25 6v12a1.5 1.5 0 0 0 1.5 1.5Zm10.5-11.25h.008v.008h-.008V8.25Zm.375 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
-          </svg>
-          
-        <p>Selecciona una imagen</p>
-    </div>
-    @if(newPostForm.get('image')?.invalid && newPostForm.get('title')?.touched) {
+    <input #imagePicker type="file" id="image" class="hidden" (change)="onFileSelected($event)"   accept="image/*"    />
+    @if (!selectedCoverImage()) {
+      <div (click)="imagePicker.click()" class="cursor-pointer w-full h-64 border border-primary-300 hover:bg-primary-100 border-dashed rounded-md bg-primary-50 text-primary-700 flex flex-col items-center justify-center gap-3">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-12">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 15.75 5.159-5.159a2.25 2.25 0 0 1 3.182 0l5.159 5.159m-1.5-1.5 1.409-1.409a2.25 2.25 0 0 1 3.182 0l2.909 2.909m-18 3.75h16.5a1.5 1.5 0 0 0 1.5-1.5V6a1.5 1.5 0 0 0-1.5-1.5H3.75A1.5 1.5 0 0 0 2.25 6v12a1.5 1.5 0 0 0 1.5 1.5Zm10.5-11.25h.008v.008h-.008V8.25Zm.375 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
+            </svg>
+            
+          <p>Selecciona una imagen</p>
+      </div>
+
+    } @else {
+      <div class="cursor-pointer w-full h-64 relative">
+        <img class="w-full h-full object-cover" />
+        <div class="absolute w-full h-full p-2.5 bg-white/60 backdrop-blur-md flex flex-col items-center justify-center gap-3">
+          <p-button [rounded]="true" severity="danger"]></p-button>
+        </div>
+      </div>
+    }
+    @if(newPostForm.get('image')?.invalid && newPostForm.get('image')?.touched) {
         <p-message severity="error">La imagen es necesaria</p-message>
     }
   </div>
