--- a/src/app/components/new-post-form/new-post-form.component.html
+++ b/src/app/components/new-post-form/new-post-form.component.html
@@ -1,10 +1,10 @@
-<form class="flex flex-col gap-5" [formGroup]="newPostForm" (ngSubmit)="onSubmit()">
+<form class="flex flex-col gap-5 px-10" [formGroup]="newPostForm" (ngSubmit)="onSubmit()">
 
 <div class="flex flex-col gap-1">
     <label for="image">Imagen de portada*</label>
     <input #imagePicker type="file" id="image" class="hidden" (change)="onFileSelected($event)"   accept="image/*"    />
-    @if (!selectedCoverImage()) {
-      <div (click)="imagePicker.click()" class="cursor-pointer w-full h-64 border border-primary-300 hover:bg-primary-100 border-dashed rounded-md bg-primary-50 text-primary-700 flex flex-col items-center justify-center gap-3">
+    @if (!previewCover()) {
+      <div (click)="imagePicker.click()" class="cursor-pointer w-full h-64 border border-primary-300 hover:bg-primary-100 border-dashed rounded-md bg-primary-50 text-primary-700 dark:text-primary-300 dark:bg-surface-950 flex flex-col items-center justify-center gap-3">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-12">
               <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 15.75 5.159-5.159a2.25 2.25 0 0 1 3.182 0l5.159 5.159m-1.5-1.5 1.409-1.409a2.25 2.25 0 0 1 3.182 0l2.909 2.909m-18 3.75h16.5a1.5 1.5 0 0 0 1.5-1.5V6a1.5 1.5 0 0 0-1.5-1.5H3.75A1.5 1.5 0 0 0 2.25 6v12a1.5 1.5 0 0 0 1.5 1.5Zm10.5-11.25h.008v.008h-.008V8.25Zm.375 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
             </svg>
@@ -14,9 +14,14 @@
 
     } @else {
       <div class="cursor-pointer w-full h-64 relative">
-        <img class="w-full h-full object-cover" />
-        <div class="absolute w-full h-full p-2.5 bg-white/60 backdrop-blur-md flex flex-col items-center justify-center gap-3">
-          <p-button [rounded]="true" severity="danger"]></p-button>
+        <img [src]="previewCover()" class="w-full h-full object-cover" />
+        <div class="absolute top-0 right-0 p-2.5">
+          <p-button [rounded]="true" severity="danger" (onClick)="removeImage()">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+            </svg>
+            
+          </p-button>
         </div>
       </div>
     }
@@ -24,7 +29,47 @@
         <p-message severity="error">La imagen es necesaria</p-message>
     }
   </div>
-
+  <div class="flex flex-col gap-1">
+    <label for="title">Título*</label>
+    <input pInputText required minlength="10" type="text" id="title" formControlName="title" class="w-full" />
+    @if(newPostForm.get('title')?.invalid && !newPostForm.get('title')?.pristine) {
+        <p-message severity="error">El título debe tener más de 10 caracteres</p-message>
+    }
+  </div>
+  <div class="flex flex-col gap-1">
+    <label for="author">Autor*</label>
+    <input pInputText required type="text" id="author" formControlName="author" class="w-full" />
+    @if(newPostForm.get('author')?.invalid &&!newPostForm.get('author')?.pristine) {
+        <p-message severity="error">El autor es obligatorio</p-message>
+    }
+  </div>
+  <div class="flex flex-col gap-1">
+    <label for="date">Fecha*</label>
+    <p-datepicker formControlName="date" id="date"  appendTo="body" styleClass="w-full" />
+    @if(newPostForm.get('date')?.invalid &&!newPostForm.get('date')?.pristine) {
+        <p-message severity="error">La fecha es obligatoria</p-message>
+    }
+  </div>
+  <div class="flex flex-col gap-1">
+    <label for="extract">Extracto/resumen*</label>
+    <textarea pTextarea  required minlength="60" id="extract" formControlName="extract" class="w-full" rows="3"></textarea>
+    @if(newPostForm.get('extract')?.invalid &&!newPostForm.get('extract')?.pristine) {
+        <p-message severity="error">El extracto debe tener más de 60 caracteres</p-message>
+    }
+  </div>
+  <div class="flex flex-col gap-1">
+    <div class="flex flex-row justify-between items-center">
+      <label for="content">Contenido*</label>
+      <p-button severity="secondary" (onClick)="autoGenerateContent()" size="small">Generar <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904 9 18.75l-.813-2.846a4.5 4.5 0 0 0-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 0 0 3.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 0 0 3.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 0 0-3.09 3.09ZM18.259 8.715 18 9.75l-.259-1.035a3.375 3.375 0 0 0-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 0 0 2.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 0 0 2.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 0 0-2.456 2.456ZM16.894 20.567 16.5 21.75l-.394-1.183a2.25 2.25 0 0 0-1.423-1.423L13.5 18.75l1.183-.394a2.25 2.25 0 0 0 1.423-1.423l.394-1.183.394 1.183a2.25 2.25 0 0 0 1.423 1.423l1.183.394-1.183.394a2.25 2.25 0 0 0-1.423 1.423Z" />
+      </svg>
+      </p-button>
+    </div>
+    <textarea pTextarea  required minlength="100" id="content" formControlName="content" class="w-full" rows="6"></textarea>
+    @if(newPostForm.get('content')?.invalid &&!newPostForm.get('content')?.pristine) {
+        <p-message severity="error">El contenido de la entrada debe tener más de 100 caracteres</p-message>
+    }
+  </div>
   <div class="flex flex-row justify-end mt-10">
     <p-button type="submit" label="Publicar entrada" [disabled]="newPostForm.invalid" />
   </div>
