--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,7 @@
 @tailwind components;
 @tailwind utilities;
 }
+
+label {
+    @apply text-sm font-medium text-neutral-700 dark:text-neutral-400;
+}
