--- a/src/app/components/blog-loading/blog-loading.component.html
+++ b/src/app/components/blog-loading/blog-loading.component.html
@@ -1,1 +1,15 @@
-<p>blog-loading works!</p>,
+<div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+    @for (post of [].constructor(4); track $index) {
+        <div class="flex flex-col gap-3">
+            <p-skeleton width="100%" height="200px" />
+            <p-skeleton width="50%" height="20px" />
+            <div class="flex-flex-col gap-3">
+                <p-skeleton width="100%" />
+                <p-skeleton width="75%" styleClass="mt-3" />
+
+            </div>
+            <p-skeleton width="10rem" styleClass="mt-10" />
+
+        </div>
+    }
+</div>
